index.css
:root {
    --b1: #4c5537;
    --b2: #ffffff;
    --b3: #a99271;
    --b4: #c5b99e;
    --text: #334828;
    --bg1: #dcc2ac;
    --bg2: #fffcee;
    --bg3: #cbae9c;
    background-color: #f2ede3;
    overflow: hidden;
    color: var(--text);
}

body {
    font-family:'Segoe UI', Tahoma, Verdana, sans-serif;

    align-self: center;
    align-items: center;
    justify-content: center;

    display: flex;

    height: 100vh;
    width: 100vw;
    margin: 0;
    padding: 0;
    background-image: linear-gradient(var(--b4) .1em, transparent .1em), linear-gradient(90deg, var(--b4) .1em, transparent .1em);
    background-size: 3em 3em;
}

h1 {
    color: var(--b1);
}

.main {
    height: 40%;
    width: 90%;
    border-radius: 20px;
    align-self: center;
    align-items: center;
    justify-content: center;
    animation-name: mainIn;
    animation-duration: 1.5s;
    padding: 2.5%;
    padding-bottom: 5%;
    overflow:scroll;
    background-color: var(--bg2);
}

@keyframes mainIn {
    0% {opacity: 0%; top:-200px;}
    100% {opacity: 100%; top:0px;}
}

.sect {
    display: none;
}

.sect img {
    width: 100%;
}

.sect-dpdown-btn {
    width: 100%;
    text-align: left;
    background: var(--bg1);
    border: none;
    border-radius: 5px;
    padding: 10px;
    margin-bottom: 10px;
    font-size: 1em;
    display: table;
}

.collapse {
    float: right;
}

.hidden {
    opacity: 0%;
}

.open-btn {
    margin-bottom: 0;
}

.decorative-image-bottom-right {
    float: right;
    position: absolute;
    max-width: 5%;
    bottom: 0;
    right: 0;
    z-index: 1;
}

ul {
    list-style-type: none;
    padding: 0;
}


.show {
    display: flow-root;
}

.socials.show {
    display: flex;
}

.socials li {
    padding: 20px;
}

.socials img {
    max-width: 6em;
    min-height: 6em;
}

header {
    width: 100%;
    position: fixed;
    top: 0;
    background-color: #a99271;
}

.topnav a {
    color: #334828;
}

.topnav .active {
    color: #715641;
}

footer {
    width: 100%;
    position: fixed;
    bottom: 0;
    background-color: #a99271;
}

form {
    width: 100%;
}

input {
    width: 100%;
    height: 10%;
    padding: 0;
}

.rsscard {
    width: 100%;
    text-align: left;
    background: var(--bg1);
    border: none;
    border-radius: 5px;
    padding: 10px;
    margin-bottom: 10px;
    font-size: 1em;
}

.rsscard:hover {
    background-color: var(--bg3);
    cursor: pointer;
}

.footertxt {
    color: var(--b2);
}

